Added Navigation Panel

--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -63,7 +63,31 @@
                 Cart
             </div>
         </div>
+
+        <!-- creating sticky panel  -->
+        <div class="panel">
+            <!-- all panels options -->
+            <div class="panel-ops">
+                <span class="all border">
+                    <i class="fa-solid fa-bars" style="color: #ffffff; height: 14px; width: 17px;"></i>
+                    <a href="#" style="padding-left: 5px;"> All</a>
+                </span>
+                <a href="#" class="border">Amazon miniTV</a>
+                <a href="#" class="border">Sell</a>
+                <a href="#" class="border">Best Sellers</a>
+                <a href="#" class="border">Today's Deals</a>
+                <a href="#" class="border">Mobiles</a>
+                <a href="#" class="border">Customer Service</a>
+                <a href="#" class="border">Electronics</a>
+                <a href="#" class="border">Prime</a>
+                <a href="#" class="border">Home & Kitchen</a>
+                <a href="#" class="border">Gift & Ideas</a>
+            </div>
+            <!-- image on the right side of panel  -->
+            <div class="New-Launches">
+                <img src="Resources/NewLaunches.jpg" class="border" alt="new Launches">
+            </div>
+        </div>
     </header>
-    
 </body>
 </html>
