added shopping section

--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
 
-        <!-- creating sticky panel  -->
+        <!-- creating panel  -->
         <div class="panel">
             <!-- all panels options -->
             <div class="panel-ops">
@@ -93,7 +93,83 @@
     <!-- main background image section  -->
     <div class="hero-section">
         <div class="hero-msg">
-            You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="https://www.amazon.in/">&nbsp;Click here to go to amazon.in</a> 
+            You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.  <a href="https://www.amazon.in/"> Click here to go to amazon.in</a> 
+        </div>
+    </div>
+
+    <!-- shop section  -->
+    <div class="shop-section">
+
+        <!-- box 1  -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Deals in PCs</h2>
+                <div class="box-img" style="background-image: url('Resources/box1_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 2 -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Gaming accessories</h2>
+                <div class="box-img" style="background-image: url('Resources/box2_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 3  -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Smartphones</h2>
+                <div class="box-img" style="background-image: url('Resources/box4_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 4 -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Furniture</h2>
+                <div class="box-img" style="background-image: url('Resources/box3_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 5  -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Toys under $25</h2>
+                <div class="box-img" style="background-image: url('Resources/box5_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 6 -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Pet care</h2>
+                <div class="box-img" style="background-image: url('Resources/box6_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 7  -->
+        <div class="box">
+            <div class="box-content">
+                <h2>New arrivals in Toys</h2>
+                <div class="box-img" style="background-image: url('Resources/box7_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
+        </div>
+
+        <!-- box 8 -->
+        <div class="box">
+            <div class="box-content">
+                <h2>Discover fashion trends</h2>
+                <div class="box-img" style="background-image: url('Resources/box8_image.jpg');"></div>
+                <a href="#">See more</a>
+            </div>
         </div>
     </div>
 
