--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -173,5 +173,172 @@
         </div>
     </div>
 
+    <!-- bottom-sign-in  -->
+    <div class="bottom-sign-in-outer">
+        <div class="bottom-sign-in-inner">
+            <p class="p1">See personalized recommendations</p>
+            <button>Sign in</button>
+            <p class="p2">New customer? <a href="#">Start here</a></p>
+        </div>
+    </div>
+
+    <!-- footer-section  -->
+    <footer>
+        <!-- panel 1  -->
+        <div class="foot-panel1">
+           <a href="#top"> Back to top </a>
+        </div>
+
+        <!-- panel 2  -->
+        <div class="foot-panel2">
+            <ul>
+                <li><p>Get to know Us</p></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Careers</a></li>
+                <li><a href="">Press Releases</a></li>
+                <li><a href="">Amazon Science</a></li>
+            </ul>
+
+            <ul>
+                <li><p>Connect with Us</p></li>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Instagram</a></li>
+            </ul>
+
+            <ul>
+                <li><p>Make Money with Us</p></li>
+                <li><a href="">Sell on Amazon</a></li>
+                <li><a href="">Sell under Amazon Accelerator</a></li>
+                <li><a href="">Protect and Build Your Brand</a></li>
+                <li><a href="">Amazon Global Selling</a></li>
+                <li><a href="">Become an Affiliate</a></li>
+                <li><a href="">Fulfilment by Amazon</a></li>
+                <li><a href="">Advertise Your Products</a></li>
+                <li><a href="">Amazon Pay on Merchants</a></li>
+            </ul>
+
+            <ul>
+                <li><p>Let Us Help You</p></li>
+                <li><a href="">COVID-19 and Amazon</a></li>
+                <li><a href="">Your Account</a></li>
+                <li><a href="">Returns Centre</a></li>
+                <li><a href="">100% Purchase Protection</a></li>
+                <li><a href="">Amazon App Download</a></li>
+                <li><a href="">Help</a></li>
+
+            </ul>
+        </div>
+        
+
+        <!-- panel 3 -->
+        <div class="foot-panel-3">
+            <div class="logo"></div>
+            <button> 
+                <i class="fa-solid fa-globe" style="color: #cccccc;"></i>
+                English
+            </button>
+        </div>
+
+        <!-- foot panel 4  -->
+        <div class="foot-panel-4">
+            <a href="">Australia</a>
+            <a href="">Brazil</a>
+            <a href="">Canada</a>
+            <a href="">China</a>
+            <a href="">France</a>
+            <a href="">Germany</a>
+            <a href="">Italy</a>
+            <a href="">Japan</a>
+            <a href="">Mexico</a>
+            <a href="">Netherlands</a>
+            <a href="">Poland</a>
+            <a href="">Singapore</a>
+            <a href="">Spain</a>
+            <a href="">Turkey</a>
+            <a href="">United Arab Emirates</a>
+            <a href="">United Kingdom</a>
+            <a href="">United States</a>
+        </div>
+
+        <!-- foot panel 5  -->
+        <div class="foot-panel-5">
+            <div class="b1">
+                <a href="">
+                   <p>AbeBooks</p>
+                    Books, art <br>
+                    & collectibles 
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                   <p>Amazon Web Services</p>
+                   Scalable Cloud <br>
+                   Computing Services
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>Audible</p>
+                    Download <br>
+                    Audio Books
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>IMDb</p>
+                    Movies, TV <br>
+                    & Celebrities
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>Shopbop</p> 
+                    Designer <br>
+                    Fashion Brands
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>Amazon Business</p>
+                    Everything For <br>
+                    Your Business
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>Prime Now</p>
+                    2-Hour Delivery <br>
+                    on Everyday Items
+                </a>
+            </div>
+
+            <div class="b1">
+                <a href="">
+                    <p>Amazon Prime Music</p>
+                    100 million songs, ad-free <br>
+                    Over 15 million podcast episodes
+                </a>
+            </div>
+
+        </div>
+
+        <!-- foot panel 6 -->
+        <div class="foot-panel-6">
+            <div class="External-pages">
+                <a href="">Conditions of Use & Sale</a>
+                <a href="">Privacy Notice</a>
+                <a href="">Interest-Based Ads</a>
+            </div>
+            <p>&copy; 1996-2023, Amazon.com, Inc. or its affiliates</p>
+        </div>
+    </footer>
+
 </body>
 </html>
